--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -174,6 +174,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\ContactModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -189,7 +190,10 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\DSC_0447.JPG" />
     <Content Include="Images\Header01.png" />
+    <Content Include="Images\HR.jpeg" />
+    <Content Include="Images\img.jpg" />
     <Content Include="Images\Tabla.jpg" />
     <Content Include="Scripts\affix.js" />
     <Content Include="Scripts\alert.js" />
