--- a/Website/Web.config
+++ b/Website/Web.config
@@ -28,6 +28,14 @@
       <remove name="FormsAuthentication" />
     </modules>
   </system.webServer>
+
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration ="false" />
+    <handlers >
+      <add path ="*" name= "ServiceStack.Factory" type ="ServiceStack.WebHost.Endpoints.ServiceStackHttpHandlerFactory, ServiceStack" verb ="*" preCondition ="integratedMode" resourceType ="Unspecified" allowPathInfo ="true" />
+    </handlers >
+  </system.webServer>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
